--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-mapa></app-mapa>>
+<ng-http-loader [backgroundColor]="'#ee9d01'" spinner="sk-chasing-dots"></ng-http-loader>
 
-<router-outlet></router-outlet>
+<app-mapa></app-mapa>
+<router-outlet>
+</router-outlet>
