input buscador principal

--- a/src/app/mapa/mapa.component.html
+++ b/src/app/mapa/mapa.component.html
@@ -92,10 +92,13 @@
       </div>
     </div>
   </div>
+
   <div id="buscador" class="flotanteCnt">
     <div class="col-12">
-      <div class="input-group mb-3">
-        <input type="text" name="buscador-principal" id="buscador-principal">
+      <div class="inner-addon right-addon">
+        <label class="btn mb-0 rounded-left" title="Buscar" for=""><i class="mdi mdi-magnify mdi-24px"></i></label>
+        <input class="form-control" type="text" name="buscador-principal" id="buscador-principal"
+          placeholder="Buscar en el visor">
       </div>
     </div>
   </div>
@@ -118,5 +121,4 @@
   <div class="botones-circulo btn-herramientas" (click)="MostrarControles()">
     <i class="mdi mdi-cog mdi-spin"></i>
   </div>
-
 </div>
