--- a/src/styles.scss
+++ b/src/styles.scss
@@ -525,39 +525,25 @@ a {
   }
 }
 .flotanteCnt {
-  position: absolute;
-  left: 110px;
+  overflow: hidden;
+  box-shadow: none;
+  backdrop-filter: blur(5px);
+  width: 350px;
+  position: relative;
+  margin: 0;
+  height: 50px;
+  font-weight: 200;
   top: 10px;
-  z-index: 9999991;
-  transition: left 0.5s;
-  -webkit-transform: translateX(0px);
-  transform: translateX(0px);
-  transition-property: -webkit-transform, transform, visibility, opacity;
-  transition-duration: 200ms;
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-  height: 3rem;
-  border: none;
-  #content-container {
-    background: #fff;
-    overflow: hidden;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    z-index: 0;
-    white-space: normal;
-
+  left: 110px;
+  z-index: 999999;
+  .form-control {
+    font-size: 1.1rem;
+    background-color: rgba(255, 253, 253, 0.911);
   }
-  #input {
-    position: relative;
-    background: #fff;
-    border-radius: 8px;
-    box-sizing: border-box;
-    width: 392px;
-    height: 48px;
-    border-bottom: 1px solid transparent;
-    padding: 12px 104px 11px 64px;
-    transition-property: background, box-shadow;
-    transition-duration: 0.3s;
+  input::placeholder {
+    color: #aaa;
+    font-size: 1rem;
+    font-weight: 100;
   }
 }
 .botones-circulo {
