--- a/src/app/mapa/mapa.component.html
+++ b/src/app/mapa/mapa.component.html
@@ -115,6 +115,15 @@
   <div class="botones-circulo btn-leyenda">
     <i class="mdi mdi-palette-swatch"></i>
   </div>
+  <div class="botones-circulo btn-subir-shape of-setting">
+    <i class="mdi mdi-file-upload"></i>
+  </div>
+  <div class="botones-circulo btn-exportar of-setting">
+    <i class="mdi mdi-download"></i>
+  </div>
+  <div class="botones-circulo btn-mas-opciones of-setting" (click)="MostrarControlesMapa()"> 
+    <i class="mdi mdi-more"></i>
+  </div>
   <div class="botones-circulo btn-herramientas" (click)="MostrarControles()">
     <i class="mdi mdi-cog mdi-spin"></i>
   </div>
